feat: Complete ML functions and union with the frontend
